# php-hardened-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: benchmark.php  benchmark.rs
examples/: cors.php  csrf-protection.php  hostname.php  hsts.php  html-sanitizer.php  path.php  rng.php  shell-command.php
examples/sanitizers/: html.php  svg.php
examples/security-headers/: content-security-policy.php  csp.php  hsts.php  misc.php  permissions-policy.php  referrer-policy.php  strict-transport-security.php  whatnot.php
examples/security-headers/cross-origin/: coep.php  cors.php  embedder-policy.php  opener-policy.php  resource-policy.php  resource-sharing.php
examples/security_headers/: csp.php  referrerpolicy.php
php-hardened-cdylib/: Cargo.toml  hardened.stubs.php  php-hardened.stubs.php  test.php
php-hardened-cdylib/src/: lib.rs
php-hardened-macro/: Cargo.toml
php-hardened-macro/src/: lib.rs
src/: csp.rs  csrf.rs  hostname.rs  html_sanitizer.rs  lib.rs  path.rs  rng.rs  shell_command.rs
src/sanitizers/: html.rs  mod.rs
src/sanitizers/file/: archive.rs  mod.rs  png.rs
src/sanitizers/svg/: config.rs  error.rs  mod.rs  style.rs  validators.rs
src/security_headers/: cors.rs  csp.rs  hsts.rs  misc.rs  mod.rs  permissions.rs  referrer_policy.rs  whatnot.rs
src/security_headers/cross_origin/: coep.rs  cors.rs  embedder_policy.rs  mod.rs  opener_policy.rs  resource_policy.rs  resource_sharing.rs
tests/: shell-command.php
tests/sanitizers/file/: test.php
