[package]
name = "php-hardened"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = { git = "https://github.com/kakserpom/ammonia.git", branch = "owned", optional = true }
#ammonia = {path = "ammonia"}
anyhow = "1.0.98"
ext-php-rs = { git = "https://github.com/kakserpom/ext-php-rs", branch = "pending_mrs", features = ["anyhow"] }
url = { version = "2.5.4", optional = true }
rand = { version = "0.9", optional = true }
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
strum_macros = "0.27.1"
unicode-segmentation = "1.12.0"
trim-in-place = { version = "0.1.7", optional = true }
csrf = { version = "0.5.0", optional = true }
data-encoding = { version = "2.9.0", optional = true }
serde_json = { version = "1.0.140", optional = true }
php-hardened-macro = { path = "php-hardened-macro" }
shell-words = { version = "1.1.0", optional = true }
libc = "0.2.174"
mimalloc = { version = "0.1.47", optional = true }
unrar = { version = "0.5.8", optional = true }
png = { version = "0.18.0", optional = true }
zip = { version = "5.1.1", optional = true }

[features]
default = ["mimalloc", "shell_command", "html_sanitizer", "file_sanitizers", "hostname", "path", "rng", "csrf", "headers"]
mimalloc = ["dep:mimalloc"]
shell_command = ["dep:shell-words"]
html_sanitizer = ["dep:ammonia"]
file_sanitizers = ["dep:zip", "dep:unrar", "dep:png"]
hostname = ["dep:url"]
path = []
rng = ["dep:rand"]
csrf = ["dep:csrf", "dep:data-encoding"]
headers = ["dep:trim-in-place", "dep:serde_json"]
test = []

[dev-dependencies]
assertables = "9.8.0"
criterion = "0.6.0"

[[bench]]
name = "benchmark"
harness = false
