[package]
name = "php-hardened"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = { git = "https://github.com/kakserpom/ammonia.git", branch = "owned", optional = true }
thiserror = "2.0"
ext-php-rs = { git = "https://github.com/davidcole1340/ext-php-rs.git", branch = "master" }
url = { version = "2.5", optional = true }
rand = { version = "0.9", optional = true }
strum = { version = "0.27", features = ["derive", "strum_macros"] }
strum_macros = "0.27"
unicode-segmentation = "1.12"
trim-in-place = { version = "0.1", optional = true }
csrf = { version = "0.5.0", optional = true }
data-encoding = { version = "2.9", optional = true }
serde_json = { version = "1.0.140", optional = true }
php-hardened-macro = { path = "php-hardened-macro" }
shell-words = { version = "1.1.0", optional = true }
libc = "0.2.174"
mimalloc = { version = "0.1", optional = true }
unrar = { version = "0.5.8", optional = true }
png = { version = "0.18.0", optional = true }
zip = { version = "6.0", optional = true }
regex = { version = "1.12", optional = true }
lazy_static = { version = "1.5", optional = true }

[features]
default = ["mimalloc", "shell_command", "html_sanitizer", "svg_sanitizer", "file_sanitizers", "hostname", "path", "rng", "csrf", "headers"]
mimalloc = ["dep:mimalloc"]
shell_command = ["dep:shell-words"]
html_sanitizer = ["dep:ammonia"]
svg_sanitizer = ["dep:ammonia", "dep:regex", "dep:lazy_static"]
file_sanitizers = ["dep:zip", "dep:unrar", "dep:png"]
hostname = ["dep:url"]
path = []
rng = ["dep:rand"]
csrf = ["dep:csrf", "dep:data-encoding"]
headers = ["dep:trim-in-place", "dep:serde_json"]
test = ["ext-php-rs/embed"]

[dev-dependencies]
assertables = "9.8"
criterion = "0.8.1"

[[bench]]
name = "benchmark"
harness = false

# Patch clang-sys and bindgen for preserve_none calling convention support (libclang 19/20)
# Required for PHP 8.5+ on macOS ARM64 which uses TAILCALL VM mode
# - clang-sys: Adds libclang 19/20 bindings (https://github.com/KyleMayes/clang-sys/pull/195)
# - bindgen: Maps CXCallingConv_PreserveNone to C ABI
[patch.crates-io]
clang-sys = { git = "https://github.com/extphprs/clang-sys.git", branch = "preserve-none-support" }
bindgen = { git = "https://github.com/extphprs/rust-bindgen.git", branch = "preserve-none-support" }

